Fix comments area spacing.

--- a/livre/style.css
+++ b/livre/style.css
@@ -171,7 +171,14 @@ input:not([type="submit"]):focus {
 .wp-block-post-comments .comment-form-cookies-consent #wp-comment-cookies-consent {
 	margin-top: 0.2em;
 }
-/*
+
+.wp-block-post-comments h3#comments {
+	margin-top: var(--wp--style--block-gap);
+}
+
+.wp-block-post-comments .navigation + .comment-respond {
+	margin-top: calc(3 * var(--wp--style--block-gap));
+}/*
  * Drop cap refinements.
  */
 
